cabal-version:      3.6
name:               iohk-task
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josh Godsiff
maintainer:         thedataangel@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable iohk-task
    main-is:          Main.hs
    ghc-options:      -Wall

    -- Modules included in this executable, other than Main.
    other-modules:    HDT.Tasks
                    , HDT.Agent
                    , HDT.PingPong
                    , HDT.RunIO
                    , HDT.Blockchain
                    , HDT.Bft
                    , HDT.RunPure

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:  
    build-depends:    base ^>=4.14.3.0
                    , stm
                    , free
                    , text
                    , async
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
